@startuml
'https://plantuml.com/class-diagram

class Record{
     # username: String
     # score: int
     # time: Date
     + Record(String username, int score)
     + Record(String recordString)
     + getUsername(): String
     + getScore(): int
     + getTime(): Date
     + toString(): String
}

interface RecordDAO{
    + {abstract} insert(Record record): void
    + {abstract} getAll() : List<Record>
    + {abstract} delete(int idx): void
}

class RecordDAOImpl{
     + RecordDAOImpl()
     + insert(Record record): void
     + getAll() : List<Record>
     + delete(int idx): void
}

RecordDAOImpl ..|> RecordDAO
RecordDAOImpl --> Record
@enduml